--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -16,5 +16,11 @@
     "light": "Light",
     "businessClass": "Business class",
     "audio": "Аудио"
+  },
+  "hero": {
+    "category": "УЗБЕКИСТАН",
+    "title": "Экологический указ: строгий контроль за строительством и предприятиями, искусственные озера, ограничения движения транспорта",
+    "latestNews": "Последние новости",
+    "viewMore": "Перейти в раздел"
   }
 }
