--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -22,5 +22,19 @@
     "title": "Экологический указ: строгий контроль за строительством и предприятиями, искусственные озера, ограничения движения транспорта",
     "latestNews": "Последние новости",
     "viewMore": "Перейти в раздел"
+  },
+  "trending": {
+    "title": "Актуальные новости",
+    "viewAll": "Перейти в раздел",
+    "news": {
+      "1": "Саида Мирзиёева представила в Ташкенте комплексные предложения по улучшению экологической ситуации...",
+      "2": "В Джизаке пройдут общественные слушания по проекту строительства АЭС",
+      "3": "Сборная Узбекистана заняла место в третьей корзине жеребьевки ЧМ-2026",
+      "4": "США сократили мирный план – и теперь пытаются убедить Россию принять его",
+      "5": "25-летнее преступление, запрет на фото и министры «Талибана», отправившиеся в Индию...",
+      "6": "«Нефтчи» стал чемпионом Узбекистана после 24-летнего перерыва",
+      "7": "Предприятиям, загрязняющим воздух, дан срок: они должны установить станции мониторинга...",
+      "8": "В Андижане сотрудник органов внутренних дел и его несовершеннолетняя дочь погибли от газа"
+    }
   }
 }
