feat: add PhotoGallery component with responsive grid layout and translation support

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,5 +36,13 @@
       "7": "Air-polluting enterprises were given a deadline: they must install monitoring stations...",
       "8": "An internal affairs officer and his minor daughter died from gas in Andijan"
     }
+  },
+  "photoGallery": {
+    "title": "Photo Gallery",
+    "viewAll": "Go to section",
+    "photos": {
+      "1": "Javohir Sindorov became the winner of the World Cup. In the final, he defeated China's representative Wei Yini and won...",
+      "2": "A special commission has been created in Tashkent to improve the environmental situation, with serious powers..."
+    }
   }
 }
