--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -36,5 +36,13 @@
       "7": "Предприятиям, загрязняющим воздух, дан срок: они должны установить станции мониторинга...",
       "8": "В Андижане сотрудник органов внутренних дел и его несовершеннолетняя дочь погибли от газа"
     }
+  },
+  "photoGallery": {
+    "title": "Фотогалерея",
+    "viewAll": "Перейти в раздел",
+    "photos": {
+      "1": "Джавохир Синдоров стал победителем Кубка мира. В финале он победил представителя Китая Вей Йини и завоевал...",
+      "2": "В Ташкенте создана специальная комиссия по улучшению экологической ситуации, наделенная серьезными полномочиями..."
+    }
   }
 }
