feat: add Survey component with news items grid and localization support

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,5 +44,17 @@
       "1": "Javohir Sindorov became the winner of the World Cup. In the final, he defeated China's representative Wei Yini and won...",
       "2": "A special commission has been created in Tashkent to improve the environmental situation, with serious powers..."
     }
+  },
+  "survey": {
+    "title": "Kun.uz Investigation",
+    "viewAll": "Go to section",
+    "news": {
+      "1": "\"Trucks are the reason there's no halva\" – when will the disorder in the border village end?",
+      "2": "\"Everyone knows, but no one speaks\" - Who filled the canal with foam in Buloqboshi?",
+      "3": "\"Can savagery reach this level?..\" - bees are dying in the valley due to poisonous pesticide",
+      "4": "Is there a guarantee that the incident like in \"Medgorodok\" won't happen again? Hot water pipe burst in Tashkent",
+      "5": "Medicines in Uzbekistan are more expensive than in Kazakhstan – what factors affect the pharmaceutical market?",
+      "6": "\"Thought I would die\" – In Tashkent, for the first time, they tried to rob with a knife to the neck"
+    }
   }
 }
