--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -44,5 +44,17 @@
       "1": "Джавохир Синдоров стал победителем Кубка мира. В финале он победил представителя Китая Вей Йини и завоевал...",
       "2": "В Ташкенте создана специальная комиссия по улучшению экологической ситуации, наделенная серьезными полномочиями..."
     }
+  },
+  "survey": {
+    "title": "Расследование Kun.uz",
+    "viewAll": "Перейти в раздел",
+    "news": {
+      "1": "\"Грузовики - причина отсутствия халвы\" – когда прекратится беспорядок в приграничном селе?",
+      "2": "\"Все знают, но никто не говорит\" - Кто наполнил канал пеной в Булокбоши?",
+      "3": "\"Неужели дикость дошла до этого?..\" - из-за ядовитого препарата пчелы вымирают в долине",
+      "4": "Есть ли гарантия, что инцидент как в \"Медгородке\" не повторится? В Ташкенте прорвало трубу с горячей водой",
+      "5": "Лекарства в Узбекистане дороже, чем в Казахстане – какие факторы влияют на фармацевтический рынок?",
+      "6": "\"Думал, умру\" – В Ташкенте впервые попытались совершить жестокое ограбление с ножом на шее"
+    }
   }
 }
