--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -56,5 +56,35 @@
       "5": "Лекарства в Узбекистане дороже, чем в Казахстане – какие факторы влияют на фармацевтический рынок?",
       "6": "\"Думал, умру\" – В Ташкенте впервые попытались совершить жестокое ограбление с ножом на шее"
     }
+  },
+  "articles": {
+    "title": "Статьи",
+    "viewAll": "Перейти в раздел",
+    "items": {
+      "1": {
+        "title": "Что написано в «Мирном плане Трампа»? Все 28 пунктов на узбекском языке",
+        "description": "Судя по поведению администрации Трампа, этот проект не взят с потолка. То, что интерпретируется как «Мирный план Трампа»"
+      },
+      "2": {
+        "title": "Что написано в «Мирном плане Трампа»? Все 28 пунктов на узбекском языке",
+        "description": "Судя по поведению администрации Трампа, этот проект не взят с потолка. То, что интерпретируется как «Мирный план Трампа»"
+      },
+      "3": {
+        "title": "Что написано в «Мирном плане Трампа»? Все 28 пунктов на узбекском языке",
+        "description": "Судя по поведению администрации Трампа, этот проект не взят с потолка. То, что интерпретируется как «Мирный план Трампа»"
+      },
+      "4": {
+        "title": "Что написано в «Мирном плане Трампа»? Все 28 пунктов на узбекском языке",
+        "description": "Судя по поведению администрации Трампа, этот проект не взят с потолка. То, что интерпретируется как «Мирный план Трампа»"
+      },
+      "5": {
+        "title": "Что написано в «Мирном плане Трампа»? Все 28 пунктов на узбекском языке",
+        "description": "Судя по поведению администрации Трампа, этот проект не взят с потолка. То, что интерпретируется как «Мирный план Трампа»"
+      },
+      "6": {
+        "title": "Что написано в «Мирном плане Трампа»? Все 28 пунктов на узбекском языке",
+        "description": "Судя по поведению администрации Трампа, этот проект не взят с потолка. То, что интерпретируется как «Мирный план Трампа»"
+      }
+    }
   }
 }
