--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -86,5 +86,27 @@
         "description": "Судя по поведению администрации Трампа, этот проект не взят с потолка. То, что интерпретируется как «Мирный план Трампа»"
       }
     }
+  },
+  "videoNews": {
+    "title": "Видео-новости",
+    "viewAll": "Перейти в раздел",
+    "viewMore": "Перейти в раздел",
+    "videos": {
+      "1": {
+        "title": "Некоторые деревья начали цвести. Что теперь будет? Теплая и бездождевая осень вызвала странное явление"
+      },
+      "2": {
+        "title": "Автомобилям будут выдаваться экостикеры: \"зеленый\", \"желтый\" и \"красный\""
+      },
+      "3": {
+        "title": "Мобильные операторы повышают цены. Могут ли цены снизиться, если предоставят налоговые льготы?"
+      },
+      "4": {
+        "title": "Израиль начал масштабную военную операцию на севере Западного берега"
+      },
+      "5": {
+        "title": "Отставной главный переговорщик Украины рассказал о плане США и Европы"
+      }
+    }
   }
 }
