--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -108,5 +108,27 @@
         "title": "Отставной главный переговорщик Украины рассказал о плане США и Европы"
       }
     }
+  },
+  "interviews": {
+    "title": "Интервью",
+    "viewAll": "Перейти в раздел",
+    "items": {
+      "1": {
+        "title": "Исламские финансы – экономика, не отделенная от реального рынка...",
+        "description": "\"Черный понедельник\", \"черная пятница\" – в мире происходят финансовые кризисы с разными названиями. Причина этих кризисов..."
+      },
+      "2": {
+        "title": "Депрессия, генетика или давление общества: что доводит людей до суицида...",
+        "description": "\"Черный понедельник\", \"черная пятница\" – в мире происходят финансовые кризисы с разными названиями. Причина этих кризисов..."
+      },
+      "3": {
+        "title": "\"Нужно ставить большие цели и не бояться\" – узбек из Гарварда...",
+        "description": "\"Черный понедельник\", \"черная пятница\" – в мире происходят финансовые кризисы с разными названиями. Причина этих кризисов..."
+      },
+      "4": {
+        "title": "Фермеры снова перед испытанием: что будет с мораториями?",
+        "description": "\"Черный понедельник\", \"черная пятница\" – в мире происходят финансовые кризисы с разными названиями. Причина этих кризисов..."
+      }
+    }
   }
 }
