--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -130,5 +130,23 @@
         "description": "\"Черный понедельник\", \"черная пятница\" – в мире происходят финансовые кризисы с разными названиями. Причина этих кризисов..."
       }
     }
+  },
+  "business": {
+    "title": "Kun.uz бизнес",
+    "viewAll": "Перейти в раздел",
+    "items": {
+      "1": {
+        "title": "TMK – критический минерал в отношениях Узбекистана и США..."
+      },
+      "2": {
+        "title": "Праздник в каждом пикселе: как ROG проводит Новый год в играх..."
+      },
+      "3": {
+        "title": "\"Туризм на Шелковом пути\": Санкт-Петербург на Ташкентской международной ярмарке..."
+      },
+      "4": {
+        "title": "TMK – критический минерал в отношениях Узбекистана и США..."
+      }
+    }
   }
 }
