--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -163,5 +163,34 @@
     "reklama": "Реклама",
     "mavzulari": "Темы дня",
     "jamoasi": "Команда Kun.uz"
+  },
+  "uzbekistanPage": {
+    "heroTitle": "Шавкат Мирзиёев ознакомился с работами по модернизации махалли Бустон в Гулистане",
+    "loadMore": "Загрузить еще",
+    "latestNews": "Последние новости",
+    "viewSection": "Перейти в раздел",
+    "newsCards": {
+      "1": "Личность офицера, погибшего при взрыве в Гулистане, установлена…",
+      "2": "Министерство энергетики предоставило льготы частному предпринимателю…",
+      "3": "В Сырдарьинской области будут производить автомобили в сотрудничестве с Китаем…",
+      "4": "В Паст Даргоме выявлено загрязнение воздуха владельцами свиноферм…",
+      "5": "В Сырдарьинской области будет построено водохранилище «Султонновуз»…",
+      "6": "На выходных ожидается дождь, в некоторых районах дождь со снегом…",
+      "7": "Ожидается визит Шавката Мирзиёева в Сырдарьинскую область…",
+      "8": "Центробанк о порядке использования карт несовершеннолетними…",
+      "9": "Опыт «умной деревни» Венгрии испытывается в Сырдарье…"
+    },
+    "sidebarNews": {
+      "1": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…",
+      "2": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…",
+      "3": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…",
+      "4": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…",
+      "5": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…",
+      "6": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…",
+      "7": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…",
+      "8": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…",
+      "9": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…",
+      "10": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…"
+    }
   }
 }
